--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tsconfig/svelte": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vitest/coverage-c8": "^0.22.1",
     "autoprefixer": "^10.4.8",
     "eslint": "^8.23.0",
     "postcss": "^8.4.16",
