--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "cypress:open": "cypress open"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
@@ -28,5 +29,8 @@
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
     "vitest": "^0.22.1"
+  },
+  "dependencies": {
+    "cypress": "^10.7.0"
   }
 }
