--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@typescript-eslint/parser": "^5.36.1",
     "@vitest/coverage-c8": "^0.22.1",
     "autoprefixer": "^10.4.8",
-    "eslint": "^8.23.0",
+    "eslint": "8.22.0",
     "postcss": "^8.4.16",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
@@ -31,6 +31,7 @@
     "vitest": "^0.22.1"
   },
   "dependencies": {
-    "cypress": "^10.7.0"
+    "cypress": "^10.7.0",
+    "eslint-plugin-cypress": "^2.12.1"
   }
 }
