--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,16 @@
     },
     "plugins": [
         "@typescript-eslint",
-        "cypress"
+        "cypress",
+        "svelte3"
+    ],
+    "overrides": [
+        {
+            "files": [
+                "*.svelte"
+            ],
+            "processor": "svelte3/svelte3"
+        }
     ],
     "rules": {
         "indent": [
@@ -40,5 +49,8 @@
         "cypress/no-force": "warn",
         "cypress/no-async-tests": "error",
         "cypress/no-pause": "error"
-    }
+    },
+    "settings": {
+        "svelte3/typescript": true
+  }
 }
