--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "lint": "eslint --ext .js,.ts,.svelte src"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
@@ -20,6 +21,7 @@
     "@vitest/coverage-c8": "^0.22.1",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "postcss": "^8.4.16",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
