--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@vitest/coverage-c8": "^0.22.1",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "postcss": "^8.4.16",
+    "prettier": "2.7.1",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
