--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "test": "vitest",
+    "test:run": "vitest run",
     "coverage": "vitest run --coverage",
     "cypress:open": "cypress open",
-    "lint": "eslint --ext .js,.ts,.svelte src"
+    "lint": "eslint --ext .js,.ts,.svelte src",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@brainandbones/skeleton": "^0.32.19",
@@ -25,6 +27,7 @@
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "husky": "^8.0.1",
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
     "svelte": "^3.49.0",
