--- a/package.json
+++ b/package.json
@@ -16,31 +16,32 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@brainandbones/skeleton": "^0.32.19",
-    "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "@brainandbones/skeleton": "^0.67.5",
+    "@sveltejs/vite-plugin-svelte": "^1.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tsconfig/svelte": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@vitest/coverage-c8": "^0.22.1",
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "@vitest/coverage-c8": "^0.25.2",
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "husky": "^8.0.1",
-    "postcss": "^8.4.16",
-    "prettier": "2.7.1",
-    "svelte": "^3.49.0",
-    "svelte-check": "^2.8.0",
+    "husky": "^8.0.2",
+    "postcss": "^8.4.19",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "svelte": "^3.53.1",
+    "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.1.8",
-    "tslib": "^2.4.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7",
-    "vitest": "^0.22.1"
+    "tailwindcss": "^3.2.4",
+    "tslib": "^2.4.1",
+    "typescript": "^4.8.4",
+    "vite": "^3.2.3",
+    "vitest": "^0.25.2"
   },
   "dependencies": {
-    "cypress": "^10.7.0",
+    "cypress": "^11.0.1",
     "eslint-plugin-cypress": "^2.12.1"
   }
 }
