--- a/package.json
+++ b/package.json
@@ -17,31 +17,32 @@
   },
   "devDependencies": {
     "@brainandbones/skeleton": "^0.67.5",
-    "@sveltejs/vite-plugin-svelte": "^1.2.0",
+    "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tsconfig/svelte": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "@vitest/coverage-c8": "^0.25.2",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "@vitest/coverage-c8": "^0.26.2",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.27.0",
+    "eslint": "8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "husky": "^8.0.2",
-    "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "svelte": "^3.53.1",
-    "svelte-check": "^2.9.2",
-    "svelte-preprocess": "^4.10.7",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "svelte": "^3.55.0",
+    "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.4.1",
-    "typescript": "^4.8.4",
-    "vite": "^3.2.3",
-    "vitest": "^0.25.2"
+    "typescript": "^4.9.4",
+    "vite": "^4.0.3",
+    "vitest": "^0.26.2"
   },
   "dependencies": {
-    "cypress": "^11.0.1",
+    "@skeletonlabs/skeleton": "^0.86.9",
+    "cypress": "^12.2.0",
     "eslint-plugin-cypress": "^2.12.1"
   }
 }
